--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 requests==2.18.*
 aiohttp==2.3.*
-pandas==0.21a.*
-tables==3.4.*
+pandas==1.2.3
+tables==3.6.*
 ipdb
 ipython
 pytest
+httpx==0.17.1
